--- a/basics/cartpol.ipynb
+++ b/basics/cartpol.ipynb
@@ -2,24 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "c07efe74",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Gym has been unmaintained since 2022 and does not support NumPy 2.0 amongst other critical functionality.\n",
-      "Please upgrade to Gymnasium, the maintained drop-in replacement of Gym, or contact the authors of your software and request that they upgrade.\n",
-      "Users of this version of Gym should be able to simply replace 'import gym' with 'import gymnasium as gym' in the vast majority of cases.\n",
-      "See the migration guide at https://gymnasium.farama.org/introduction/migration_guide/ for additional information.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
-    "import gym as gs\n",
+    "import gymnasium as gs\n",
     "from stable_baselines3 import PPO\n",
     "from stable_baselines3.common.vec_env import DummyVecEnv\n",
     "from stable_baselines3.common.evaluation import evaluate_policy"
@@ -27,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "eeaa5e04",
    "metadata": {},
    "outputs": [
@@ -35,8 +24,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/workspaces/Reinforcement_Learning/myvenv/lib/python3.12/site-packages/gym/envs/registration.py:555: UserWarning: \u001b[33mWARN: The environment CartPole-v0 is out of date. You should consider upgrading to version `v1`.\u001b[0m\n",
-      "  logger.warn(\n"
+      "/workspaces/Reinforcement_Learning/myvenv/lib/python3.12/site-packages/gymnasium/envs/registration.py:519: DeprecationWarning: \u001b[33mWARN: The environment CartPole-v0 is out of date. You should consider upgrading to version `v1`.\u001b[0m\n",
+      "  logger.deprecation(\n"
      ]
     }
    ],
@@ -46,19 +35,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "550780b8",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      4\u001b[39m done=\u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[32m      5\u001b[39m score=\u001b[32m0\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m done:\n\u001b[32m      7\u001b[39m     env.render()\n\u001b[32m      8\u001b[39m     action=env.action_space.sample()\n",
-      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/workspaces/Reinforcement_Learning/myvenv/lib/python3.12/site-packages/gymnasium/envs/classic_control/cartpole.py:250: UserWarning: \u001b[33mWARN: You are calling render method without specifying any render mode. You can specify the render_mode at initialization, e.g. gym.make(\"CartPole-v0\", render_mode=\"rgb_array\")\u001b[0m\n",
+      "  gym.logger.warn(\n",
+      "/workspaces/Reinforcement_Learning/myvenv/lib/python3.12/site-packages/gymnasium/envs/classic_control/cartpole.py:214: UserWarning: \u001b[33mWARN: You are calling 'step()' even though this environment has already returned terminated = True. You should always call 'reset()' once you receive 'terminated = True' -- any further steps are undefined behavior.\u001b[0m\n",
+      "  logger.warn(\n"
      ]
     }
    ],
